tests/compile-fail/stacked_borrows/unescaped_local.stderr
error: Undefined Behavior: attempting a write access using <untagged> at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
  --> $DIR/unescaped_local.rs:LL:CC
   |
LL |     unsafe { *raw = 13; }
   |              ^^^^^^^^^
   |              |
   |              attempting a write access using <untagged> at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
   |              this error occurs as part of an access at ALLOC[$HEX..$HEX]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: tag was most recently created at offsets [$HEX..$HEX]
  --> $DIR/unescaped_local.rs:LL:CC
   |
LL |     let raw = &mut x as *mut i32 as usize as *mut i32;
   |               ^^^^^^
help: tag was later invalidated at offsets [$HEX..$HEX]
  --> $DIR/unescaped_local.rs:LL:CC
   |
LL |     let _ptr = &mut x;
   |                ^^^^^^
   = note: inside `main` at $DIR/unescaped_local.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

